Footer text no longer overlaps over other content

--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,7 @@ a:hover {
 }
 
 footer {
+	background-color: white;
 	position: fixed;
 	bottom: 0.1em;
 	width: 100%;
